--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     volumes:
       - mysql:/var/lib/mysql
       - "/db:/docker-entrypoint-initdb.d"
+    ports:
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: 123
       MYSQL_DATABASE: mydb
