--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
- services:
+services:
   web:
     build:
       context: .
@@ -18,6 +18,8 @@
     volumes:
       - mysql:/var/lib/mysql
       - "/db:/docker-entrypoint-initdb.d"
+    ports:
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: 123
       MYSQL_DATABASE: mydb
